[package]
name = "do_nothing" 
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solo5-sys = "0.1.0"
solo5-rs = {path ="../.."}

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = "4.2.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
