[package]
name = "http_server" 
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solo5-sys = "0.1.0"
solo5-rs = {path ="../..",features=["net"]}
smoltcp = { version = "0.10.0", default-features = false, features = ["alloc","medium-ethernet","proto-ipv4","socket-tcp","proto-ipv4"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
